--- a/PL/Views/Home/Index.cshtml
+++ b/PL/Views/Home/Index.cshtml
@@ -1,31 +1,27 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@using PL.Properties;
+@{
+    ViewData["Title"] = "Home";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@section Styles{
+    <link rel="stylesheet" type="text/css" href="~/Content/game-stylesheet.css" />
+}
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="menu">
+    <div class="frame1">
+        <img src="~/Content/images/HomeImage.jpg" />
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="frame2">
+        <h5 id="title">@ScenarioTexts.WelcomeTitle</h5>
+        <p id="large-text">@ScenarioTexts.WelcomeMessage</p>
+        <br />
+        <h5 id="title">@ScenarioTexts.InstructionsTitle</h5>
+        <p>@ScenarioTexts.InstructionsPoint1</p>
+        <p>@ScenarioTexts.InstructionsPoint2</p>
+        <p>@ScenarioTexts.InstructionsPoint3</p>
+        <br />
+        <h6 id="warning-text">@ScenarioTexts.WelcomeWarningMessage</h6>
+        <br />
+        @Html.ActionLink("Let's go", "Index", "Event", new { area = "" }, new { @class = "btn btn-warning" })
     </div>
 </div>
