Fixed bug about Player's HighScore

--- a/PL/Views/Event/Index.cshtml
+++ b/PL/Views/Event/Index.cshtml
@@ -3,7 +3,7 @@
 @using System.Drawing
 @model PL.Models.EventModel
 @{
-    ViewData["Title"] = "Meeting";
+    ViewData["Title"] = "Event";
 }
 
 @section Styles{
