--- a/PL/Views/History/Index.cshtml
+++ b/PL/Views/History/Index.cshtml
@@ -40,6 +40,8 @@
         </table>
     }
     <br /><br />
-    @Html.ActionLink("Go Home", "Reset", "Event", new { area = "" }, new { @class = "btn btn-outline-warning" })
+    @Html.ActionLink("Start new game", "Reset", "Event", new { area = "" }, new { @class = "btn btn-warning" })
+    <br /><br />
+    @Html.ActionLink("Go Home", "Index", "Home", new { area = "" }, new { @class = "btn btn-outline-warning" })
     <br />
 </div>
